--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,5 @@ spring.datasource.password=ScreJwQBcrvAVOx6RKiH9DxQp8lFr5Y28+et2mnVV
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql:true
 
-# Enable Swagger UI
-springfox.documentation.swagger-ui.enabled=true
+## Enable Swagger UI
+#springfox.documentation.swagger-ui.enabled=true
