--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=RewardsCalc
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://database-1.caupomdck5pq.ap-south-1.rds.amazonaws.com:3306/RewardsCalc
+spring.datasource.url=jdbc:mysql://:3306/RewardsCalc
 spring.datasource.username=admin
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
