--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,14 @@ spring.datasource.password=ScreJwQBcrvAVOx6RKiH9DxQp8lFr5Y28+et2mnVV
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql:true
 
-## Enable Swagger UI
-#springfox.documentation.swagger-ui.enabled=true
+# The format used for the keystore. It could be set to JKS in case it is a JKS file
+server.ssl.key-store-type=PKCS12
+# The path to the keystore containing the certificate
+server.ssl.key-store=classpath:keystore/baeldung.p12
+# The password used to generate the certificate
+server.ssl.key-store-password=123456
+# The alias mapped to the certificate
+server.ssl.key-alias=baeldung
+
+server.ssl.enabled=true
+server.port=443
