--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,2 @@
 spring.application.name=RewardsCalc
-
-#H2
-spring.datasource.url=jdbc:h2:mem:rewardsDB;DB_CLOSE_DELAY=-1
-#spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.h2.console.enabled=true
-spring.jpa.defer-datasource-initialization=true
-spring.jpa.show-sql:true
+spring.profiles.active=mysql
