Added Discovery service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,10 @@
 spring.application.name=RewardsCalc
 spring.profiles.active=mysql
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+management.info.env.enabled=true
+management.info.build.enabled=true
+management.info.git.enabled=true
+management.info.java.enabled=true
+management.info.os.enabled=true
+management.endpoints.web.exposure.include=health,info,beans
