--- a/src/main/resources/application-mysql.properties
+++ b/src/main/resources/application-mysql.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://database-1.caupomdck5pq.ap-south-1.rds.amazonaws.com:3306/RewardsCalc
 spring.datasource.username=admin
-spring.datasource.password=
+spring.datasource.password=ScreJwQBcrvAVOx6RKiH9DxQp8lFr5Y28+et2mnVV
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql:true
 
