--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,9 @@
-#spring.security.user.name= Basant
-#spring.security.user.password= Pwd1
-
-
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url = jdbc:mysql://database-1.caupomdck5pq.ap-south-1.rds.amazonaws.com:3306/RewardsCalc
-spring.datasource.username = admin
-spring.datasource.password = ScreJwQBcrvAVOx6RKiH9DxQp8lFr5Y28+et2mnVV
-spring.jpa.hibernate.ddl-auto = update
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-
-
-#
 ##H2
-#spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
-##spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.username=sa
-#spring.datasource.password=
-#spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
+#spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.h2.console.enabled=true
 #spring.jpa.defer-datasource-initialization=true
-#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
